--- a/src/app/organization/organization.component.html
+++ b/src/app/organization/organization.component.html
@@ -33,7 +33,7 @@
           Update
         </button>
         <label *ngIf="userRoles[organizations._id].indexOf('admin') !== -1" style="float:right;">
-          <span (click)="addUserToOrg(username[organizations._id])">
+          <span (click)="addUser(username[organizations._id])">
             <mat-icon style="cursor:pointer; font-size: 32px;">
               person_add
             </mat-icon>
