--- a/src/app/contacts/contacts-view/contacts-view.component.html
+++ b/src/app/contacts/contacts-view/contacts-view.component.html
@@ -1,12 +1,24 @@
-<div class="container" *ngIf='allContacts.length === 0'>
-  <mat-card>
-    <div class="col-md-8 offset-md-2">
-      <p> You dont have contacts </p>
-    </div>
-  </mat-card>
-</div>
 <div *ngIf='!isEditMode'>
-  <div *ngIf='allContacts.length > 0'>
+  <div class="container" *ngIf='allContacts.length === 0'>
+    <mat-card>
+      <div class="col-md-8 offset-md-2">
+        <p> You dont have contacts </p>
+      </div>
+    </mat-card>
+  </div>
+</div>
+
+
+<div *ngIf='isViewAll'>
+    <button color="primary" class="simple-form-button pull-right" mat-raised-button
+      (click)="openAddContactForm(element)">
+      +
+    </button>
+    <mat-form-field>
+        <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Search">
+      </mat-form-field>
+      
+    <div *ngIf='allContacts.length > 0' >
     <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
       <!-- Checkbox Column -->
       <ng-container matColumnDef="select">
@@ -22,33 +34,30 @@
         </td>
       </ng-container>
       <!-- givenName Column -->
-      <ng-container matColumnDef="Given Name">
-        <th mat-header-cell *matHeaderCellDef> Given name </th>
+      <ng-container matColumnDef="givenName">
+        <th mat-header-cell *matHeaderCellDef> Given name</th>
         <td mat-cell *matCellDef="let element"> {{element.givenName}} </td>
       </ng-container>
       <!-- familyName Column -->
-      <ng-container matColumnDef="Family Name">
-        <th mat-header-cell *matHeaderCellDef> Family name </th>
+      <ng-container matColumnDef="familyName">
+        <th mat-header-cell *matHeaderCellDef> Family name</th>
         <td mat-cell *matCellDef="let element"> {{element.familyName}} </td>
       </ng-container>
       <!-- email Column -->
-      <ng-container matColumnDef="Email">
-        <th mat-header-cell *matHeaderCellDef> Email </th>
+      <ng-container matColumnDef="listName">
+        <th mat-header-cell *matHeaderCellDef> List Name</th>
+        <td mat-cell *matCellDef="let element"> {{element.listName}} </td>
+      </ng-container>
+
+       <!-- email Column -->
+       <ng-container matColumnDef="email">
+        <th mat-header-cell *matHeaderCellDef> Email</th>
         <td mat-cell *matCellDef="let element"> {{element.email}} </td>
       </ng-container>
+
       <ng-container matColumnDef="Action">
         <th mat-header-cell *matHeaderCellDef> Action </th>
         <td mat-cell *matCellDef="let element">
-          <span *ngIf='!element.isFavorite'>
-            <button mat-icon-button (click)="addContactFav(element)">
-              <mat-icon>star_border</mat-icon>
-            </button>
-          </span>
-          <span *ngIf='element.isFavorite'>
-            <button mat-icon-button (click)="removeContactFav(element)">
-              <mat-icon>star</mat-icon>
-            </button>
-          </span>
           <button mat-icon-button (click)="editContact(element)">
             <mat-icon>create</mat-icon>
           </button> <button mat-icon-button (click)="deleteContact(element)">
@@ -60,11 +69,31 @@
       <tr mat-row *matRowDef="let row; columns: displayedColumns;" (click)="selection.toggle(row)">
       </tr>
     </table>
+    <br>
   </div>
 </div>
+
+
+<ng-template #modal>
+    <mat-dialog-content>
+      <div>
+        Are you sure you want to delete this contact?
+      </div>
+    </mat-dialog-content>
+    <mat-dialog-actions align='end'>
+      <button (click)="cancel()" mat-raised-button color='warn'>Cancel
+      </button>
+      <button (click)="deleteOrg()" mat-raised-button cdkFocusInitial color='primary'>Yes
+      </button>
+    </mat-dialog-actions>
+  </ng-template>
+
+
+
+ 
 <div class="simple-form-aligner" *ngIf='isEditMode'>
   <mat-card class="simple-form-card">
-    <mat-card-title>Edit contact </mat-card-title>
+    <mat-card-title>Create contact </mat-card-title>
     <mat-card-content>
       <form [formGroup]="form" (ngSubmit)="submit(form.value)">
         <div class="form-group">
@@ -82,10 +111,26 @@
             </mat-error>
           </mat-form-field>
           <br>
-          <button [disabled]="waiting" class="simple-form-button" color="primary" mat-raised-button type="submit"
-            value="submit" (click)="updateContact(form.value)">
-            Update contact
-          </button>
+          <mat-form-field>
+            <mat-select placeholder="Choose a list" name="contactList" formControlName="contactList">
+              <mat-option *ngFor="let lst of lists" [value]="lst">
+                {{lst.listName}}
+              </mat-option>
+            </mat-select>
+          </mat-form-field>
+          <br>
+          <div style="text-align: center">
+            <button [disabled]="waiting" class="simple-form-button" color="primary" mat-raised-button type="submit"
+              value="submit" (click)="addContact(form.value)">
+              Create
+            </button>
+            &nbsp;
+            &nbsp;
+            <button [disabled]="waiting" class="simple-form-button" color="Basic" mat-raised-button type="submit"
+              value="submit" (click)="ignoreSaveContact()">
+              Cancel
+            </button>
+          </div>
           <mat-progress-spinner *ngIf="waiting" color="primary" mode="indeterminate" class="simple-form-spinner"
             [diameter]=22>
           </mat-progress-spinner>
@@ -93,4 +138,15 @@
       </form>
     </mat-card-content>
   </mat-card>
+</div>
+
+
+<div *ngIf='listAddMessage !== undefined'>
+  <div *ngIf='!isEditMode'>
+    <mat-card-title> {{listAddMessage}}</mat-card-title>
+    <button routerLink='/contacts/view' class="simple-form-button" color="primary" mat-raised-button
+      (click)="resetForm()">
+      Ok
+    </button>
+  </div>
 </div>
