--- a/src/app/contacts/contacts-list-add/contacts-list-add.component.html
+++ b/src/app/contacts/contacts-list-add/contacts-list-add.component.html
@@ -7,6 +7,12 @@
           <mat-form-field class="simple-form-field-50">
             <input matInput placeholder="List name" name="listName" formControlName="listName">
           </mat-form-field>
+          <span 
+          *ngIf='formErrorMessage' 
+          class="text-error-color">
+            {{formErrorMessage}}
+        </span>
+    
           <br>
           <div style="text-align: center">
             <button [disabled]="waiting" class="simple-form-button" color="primary" mat-raised-button type="submit"
