--- a/src/app/contacts/contacts-list-view/contacts-list-view.component.html
+++ b/src/app/contacts/contacts-list-view/contacts-list-view.component.html
@@ -26,28 +26,28 @@
           </mat-checkbox>
         </td>
       </ng-container>
-      
+
       <!-- givenName Column -->
       <ng-container matColumnDef="listName">
-          <th mat-header-cell *matHeaderCellDef> List name</th>
-          <td mat-cell *matCellDef="let element" (click)="onSelect(element)"> {{element.listName}}
-          </td>
-        </ng-container>
+        <th mat-header-cell *matHeaderCellDef> List name</th>
+        <td mat-cell *matCellDef="let list" (click)="onSelect(list)"> {{list.listName}}
+        </td>
+      </ng-container>
 
-           <!-- givenName Column -->
+      <!-- givenName Column -->
       <ng-container matColumnDef="NoOfContacts">
-          <th mat-header-cell *matHeaderCellDef> No. Of Contacts</th>
-          <td mat-cell *matCellDef="let element" (click)="onSelect(element)"> {{element.numberOfContacts}}
-          </td>
-        </ng-container>
+        <th mat-header-cell *matHeaderCellDef> No. Of Contacts</th>
+        <td mat-cell *matCellDef="let list" (click)="onSelect(list)"> {{list.numberOfContacts}}
+        </td>
+      </ng-container>
 
       <ng-container matColumnDef="Action">
         <th mat-header-cell *matHeaderCellDef> Action </th>
-        <td mat-cell *matCellDef="let element">
-          <button mat-icon-button (click)="editListForm(element)">
+        <td mat-cell *matCellDef="let list">
+          <button mat-icon-button (click)="editListForm(list)">
             <mat-icon>create</mat-icon>
           </button>
-          <button mat-icon-button (click)="openDeleteList(element)" (click)="listDeleteDialog(model)">
+          <button mat-icon-button (click)="openDeleteList(list)" (click)="listDeleteDialog(model)">
             <mat-icon>delete</mat-icon>
           </button>
 
@@ -75,9 +75,11 @@
           <br>
           <div style="text-align: center">
             <button [disabled]="waiting" class="simple-form-button" color="primary" mat-raised-button type="submit"
-              value="submit" (click)="addList(form.value)">
+              value="submit" (click)="addList(form)">
               Create
             </button>
+
+
             &nbsp;
             &nbsp;
             <button [disabled]="waiting" class="simple-form-button" color="Basic" mat-raised-button type="submit"
