--- a/src/app/contacts/contacts-view/contacts-view.component.html
+++ b/src/app/contacts/contacts-view/contacts-view.component.html
@@ -1,3 +1,37 @@
+<mat-card style="margin: 2px;" *ngFor="let contacts of contactsArr">
+  <mat-card-header>
+    <img mat-card-avatar src="/assets/img/profile-demo.jpg">
+    <div class="major-points">
+      <div class="name">
+        {{contacts.givenName}}
+        &nbsp;
+        {{contacts.familyName}}
+      </div>
+
+
+      <div class="email">
+        {{contacts.email}}
+      </div>
+      <div class="controls">
+        <div></div>
+
+        <button mat-icon-button (click)="editContact(contact)">
+          <mat-icon>create</mat-icon>
+        </button> <button mat-icon-button (click)="contactDeleteDialog(modal)" (click)="openDeleteContact(element)">
+          <mat-icon>delete</mat-icon>
+        </button>
+      </div>
+    </div>
+  </mat-card-header>
+</mat-card>
+
+<br>
+
+
+
+
+
+
 <div *ngIf='!isEditMode'>
   <div class="container" *ngIf='contactsArr.length === 0'>
     <mat-card>
@@ -20,14 +54,13 @@
   <div *ngIf='contactsArr.length > 0'>
     <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
       <!-- Checkbox Column -->
-      
       <ng-container matColumnDef="select">
         <th mat-header-cell *matHeaderCellDef>
           <mat-checkbox (change)="$event ? masterToggle() : null" [checked]="selection.hasValue() && isAllSelected()"
             [indeterminate]="selection.hasValue() && !isAllSelected()">
           </mat-checkbox>
         </th>
-       
+
         <td mat-cell *matCellDef="let row">
           <mat-checkbox (click)="$event.stopPropagation()" (change)="$event ? selection.toggle(row) : null"
             [checked]="selection.isSelected(row)">
@@ -52,8 +85,10 @@
         <td mat-cell *matCellDef="let contact" (click)="onSelect(contact)"> {{contact.listName}} </td>
       </ng-container>
       <ng-container>
-      <td> <mat-card>s---s</mat-card></td>
-    </ng-container>
+        <td>
+          <mat-card>s---s</mat-card>
+        </td>
+      </ng-container>
       <!-- email Column -->
       <ng-container matColumnDef="email">
         <th mat-header-cell *matHeaderCellDef> Email</th>
@@ -71,11 +106,11 @@
           </button>
         </td>
       </ng-container>
-     
+
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
       <tr mat-row *matRowDef="let row; columns: displayedColumns;" (click)="selection.toggle(row)">
       </tr>
-     
+
     </table>
     <br>
   </div>
@@ -174,4 +209,3 @@
     </button>
   </mat-dialog-actions>
 </ng-template>
- 
