--- a/src/app/contacts/contacts-details/contacts-details.component.html
+++ b/src/app/contacts/contacts-details/contacts-details.component.html
@@ -1,12 +1,35 @@
-
 <div class="container">
   <mat-card>
     <mat-card-header>
       <mat-card-title>Contact details </mat-card-title>
       <img mat-card-avatar src="/assets/img/profile-demo.jpg">
     </mat-card-header>
+    <br>
     <mat-card-content>Given name: {{contactDetails.givenName}}</mat-card-content>
     <mat-card-content>Family name: {{contactDetails.familyName}}</mat-card-content>
     <mat-card-content>email: {{contactDetails.email}}</mat-card-content>
+    <mat-card-footer style="text-align: right;">
+      <button mat-icon-button (click)="editContact()">
+        <mat-icon>create</mat-icon>
+      </button> <button mat-icon-button (click)="contactDeleteDialog(modal)" (click)="openDeleteContact()">
+        <mat-icon>delete</mat-icon>
+      </button>
+    </mat-card-footer>
   </mat-card>
 </div>
+
+
+
+<ng-template #modal>
+  <mat-dialog-content>
+    <div>
+      Are you sure you want to delete the contact of <br> {{deleteContactName}}?
+    </div>
+  </mat-dialog-content>
+  <mat-dialog-actions align='center'>
+    <button (click)="resetForm()" mat-raised-button color='warn'>Cancel
+    </button>
+    <button (click)="deleteContact()" mat-raised-button cdkFocusInitial color='primary'>Yes
+    </button>
+  </mat-dialog-actions>
+</ng-template>
