--- a/src/app/contacts/contacts-view/contacts-view.component.html
+++ b/src/app/contacts/contacts-view/contacts-view.component.html
@@ -13,9 +13,9 @@
       <div class="controls">
         <div></div>
 
-        <button mat-icon-button >
+        <button mat-icon-button (click)="editContact(contact)" >
           <mat-icon>create</mat-icon>
-        </button> <button mat-icon-button (click)="contactDeleteDialog(modal)" (click)="openDeleteContact(element)">
+        </button> <button mat-icon-button (click)="contactDeleteDialog(modal)" (click)="openDeleteContact(contact)">
           <mat-icon>delete</mat-icon>
         </button>
       </div>
