--- a/src/app/connections/connections-request/connections-request.component.html
+++ b/src/app/connections/connections-request/connections-request.component.html
@@ -9,11 +9,11 @@
 <div *ngIf='pendingConnections.length > 0'>
     <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
         <!-- givenName Column -->
-        <ng-container matColumnDef="Given Name">
+        <ng-container matColumnDef="Given Name" >
             <th mat-header-cell *matHeaderCellDef>
                 Given name
             </th>
-            <td mat-cell *matCellDef="let element">
+            <td mat-cell *matCellDef="let element" (click)="onSelect(element)">
                 {{element.givenName}}
             </td>
         </ng-container>
@@ -22,7 +22,7 @@
             <th mat-header-cell *matHeaderCellDef>
                 Family name
             </th>
-            <td mat-cell *matCellDef="let element">
+            <td mat-cell *matCellDef="let element" (click)="onSelect(element)">
                 {{element.familyName}}
             </td>
         </ng-container>
