--- a/src/app/connections/connections.component.html
+++ b/src/app/connections/connections.component.html
@@ -6,8 +6,8 @@
               Connections 
             </a> 
             <a mat-tab-link [routerLink]="navLinks[1]" routerLinkActive #rla1="routerLinkActive" [active]="rla1.isActive">
-              Requests 
-                <span matBadge="{{pendingConnectionsCounter}}" matBadgeOverlap="false" matBadgeColor="warn"> </span>
+              Requests  &nbsp; &nbsp;
+                <span matBadge="{{pendingConnectionsCounter}}" matBadgeOverlap="false" matBadgeColor="warn" > </span>
             </a>
             <a mat-tab-link [routerLink]="navLinks[2]" routerLinkActive #rla2="routerLinkActive" [active]="rla2.isActive">
               Sent 
