--- a/src/app/contacts/contacts-details/contacts-details.component.html
+++ b/src/app/contacts/contacts-details/contacts-details.component.html
@@ -11,7 +11,7 @@
         {{contactDetails.email}}
       </div>
       <div class="controls">
-        <button mat-icon-button (click)="editContact(contact)">
+        <button mat-icon-button (click)="editContact()">
           <mat-icon>create</mat-icon>
         </button> <button mat-icon-button (click)="contactDeleteDialog(modal)" (click)="openDeleteContact(contact)">
           <mat-icon>delete</mat-icon>
