--- a/src/app/contacts/contacts-list/contacts-list-details/contacts-list-details.component.html
+++ b/src/app/contacts/contacts-list/contacts-list-details/contacts-list-details.component.html
@@ -10,21 +10,19 @@
   <mat-card-header>
     <img mat-card-avatar src="/assets/img/profile-demo.jpg">
     <div class="contactStyle">
-      <div class="name" >
+      <div class="name" (click)="onSelect(contact)">
         {{contact.givenName}}
         &nbsp;
         {{contact.familyName}}
       </div>
-      <div class="email" >
+      <div class="email" (click)="onSelect(contact)">
         {{contact.email}}
       </div>
       <div class="list" >
         {{contact.listName}}
       </div>
       <div class="controls">
-        <button mat-icon-button (click)="editContact(contact)">
-          <mat-icon>create</mat-icon>
-        </button> <button mat-icon-button (click)="contactDeleteDialog(modal)" (click)="openDeleteContact(contact)">
+        <button mat-icon-button (click)="contactDeleteDialog(modal)" (click)="openDeleteContact(contact)">
           <mat-icon>delete</mat-icon>
         </button>
       </div>
